# SlippiStats

./: .gitignore  .readthedocs.yml  README.md  bench.py  dash_test.parquet  main.py  pyproject.toml  requirements.txt  setup.py  shield_drop_test.parquet  take_hit_data.xlsx  take_hit_test.parquet  tech_test.parquet  test.ipynb  test.json  versionhistory.md  wavedashdata_temp.parquet  wavedashdata_temp2.parquet  wd_test.parquet
Modern Replays/: Game_20221227T193443.slp  Game_20221227T193458.slp  Game_20221227T193812.slp  Game_20221227T193837.slp  Game_20221227T194100.slp  Game_20221227T194333.slp  Game_20221227T195139.slp  Game_20221227T195444.slp  Game_20221227T195814.slp  Game_20221227T200149.slp  Game_20221227T202334.slp  Game_20221227T205356.slp  Game_20221227T205720.slp  Game_20221227T211229.slp  Game_20221227T212019.slp  Game_20221228T024423.slp  Game_20221228T025104.slp  Game_20221228T025412.slp  Game_20221228T025702.slp  Game_20221228T025949.slp  Game_20221228T030347.slp  Game_20221228T031427.slp  Game_20221228T031649.slp  Game_20221228T033029.slp  Game_20221228T033708.slp
StatsExamples/: SSBM Data Sheet (1.02) - Character Attributes.csv  bench.py  character_attributes.parquet  combo_example.py  data_manip_example.py  l_cancel_example.ipynb  main.py  py_clip_combos.json  stats_example.py  take_hit_example.ipynb  tech_example.ipynb  wavedashdata.parquet  wavedashdata.xlsx
slippi/: __init__.py  event.py  metadata.py  parse.py  util.py
slippistats/: __init__.py  controller.py  event.py  game.py  log.py  metadata.py  parse.py  util.py
test/: replays.py  (+1 more)
(+37 files in other folders)
