[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slippistats"
authors = [
    {name = "Walnut356", email = "walnut356@gmail.com"}
]
version = "0.1.3"
dependencies = [
    "py-ubjson~=0.16",
    "tzlocal~=4.3",
    "polars~=0.17.9",
]
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
    ]
license = {file = "LICENSE.txt"}
description = "Stats library for SSBM replay files"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
namespaces = false